objects/Preferred_Vendor_Staff__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country__c</fullName>
        <label>Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email_Address__c</fullName>
        <label>Other Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_State_Province__c</fullName>
        <label>Other State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street__c</fullName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Zip_Postal_Code__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <label>Preferred Vendor</label>
        <referenceTo>Preferred_Vendor__c</referenceTo>
        <relationshipLabel>Preferred Vendor Staff</relationshipLabel>
        <relationshipName>Preferred_Vendor_Staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Preferred Vendor Staff</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferred Vendor Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>